Fixing big gap between shopping list.

--- a/client/src/components/Organisms/ShoppingList/ShoppingList.module.css
+++ b/client/src/components/Organisms/ShoppingList/ShoppingList.module.css
@@ -5,7 +5,6 @@
   justify-content: center;
   align-items: center;
   gap: 16px;
-  margin-bottom: 100px;
 }
 
 .head {
@@ -28,9 +27,6 @@
 }
 
 @media screen and (min-width: 768px) {
-  .ShoppingList {
-    padding-bottom: 200px;
-  }
   .head {
     font-size: 18px;
     margin-bottom: 32px;
@@ -43,6 +39,11 @@
 
 .recipeGroup {
   width: 100%;
+  margin-bottom: 24px;
+}
+
+.recipeGroup:last-child {
+  margin-bottom: 60px;
 }
 
 .recipeGroupTitle {
